--- a/meeting/templates/staff_pilot_list.html
+++ b/meeting/templates/staff_pilot_list.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block page_title %}
-{% trans "Search Pilot" %}
+{% trans "str_Search_pilot" %}
 {% endblock %}
 
 
@@ -49,8 +49,8 @@
       <th>{% trans "str_First_name" %}</th>
       <th>{% trans "str_Last_name" %}</th>
       <th>{% trans "str_Insurance_company" %}</th>
-      <th>{% trans "Insurance number"%}</th>
-      <th>{% trans "Licence number"%}</th>
+      <th>{% trans "str_Insurance_number"%}</th>
+      <th>{% trans "str_Licence_number"%}</th>
       <th></th>
     </tr>
   </thead>
