--- a/meeting/templates/staff_ulm_list.html
+++ b/meeting/templates/staff_ulm_list.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block page_title %}
-{% trans "Search ULM" %}
+{% trans "str_Search_ULM" %}
 {% endblock %}
 
 
@@ -52,10 +52,10 @@
     <tr>
       <th>{% trans "str_Radio_id" %}</th>
       <th>{% trans "str_Imatriculation" %}</th>
-      <th>{% trans "Imatriculation Country" %}</th>
+      <th>{% trans "str_Imatriculation_country" %}</th>
       <th>{% trans "str_Constructor"%}</th>
-      <th>{% trans "Model"%}</th>
-      <th>{% trans "Type"%}</th>
+      <th>{% trans "str_Model"%}</th>
+      <th>{% trans "str_Type"%}</th>
       <th>{% trans "str_Pilot"%}</th>
     </tr>
   </thead>
