--- a/meeting/templates/index.html
+++ b/meeting/templates/index.html
@@ -5,9 +5,7 @@
 {% block header%}
 <h1>{{meeting}}</h1>
 <p class="lead">
-{% blocktrans with start=meeting.start_date end=meeting.end_date%}
-From the {{ start }}, to the {{ end }}.
-{% endblocktrans  %}
+{% blocktrans with start=meeting.start_date end=meeting.end_date%}From the {{ start }}, to the {{ end }}.{% endblocktrans  %}
 </p>
 <hr class="my-4">
 <!-- TODO Change Program file access-->
@@ -32,13 +30,13 @@ From the {{ start }}, to the {{ end }}.
   <div class="card h-100">
     <img class="card-img-top" src="http://placehold.it/500x325" alt="">
     <div class="card-body">
-      <h4 class="card-title">{% trans "Microlight pilot"%}</h4>
+      <h4 class="card-title">{% trans "str_Microlight_pilot"%}</h4>
       {% get_chunk 'ulm_pilot_short' as ulm_pilot %}
 
       <p class="card-text">{{ulm_pilot | safe}}</p>
     </div>
     <div class="card-footer">
-      <a href="{% url 'login' %}" class="btn btn-primary">{% trans 'Sign In'%}</a>
+      <a href="{% url 'login' %}" class="btn btn-primary">{% trans 'str_Sign_In'%}</a>
     </div>
   </div>
 </div>
@@ -47,14 +45,14 @@ From the {{ start }}, to the {{ end }}.
   <div class="card h-100">
     <img class="card-img-top" src="http://placehold.it/500x325" alt="">
     <div class="card-body">
-      <h4 class="card-title">{% trans "Paramotor Pilot"%}</h4>
+      <h4 class="card-title">{% trans "str_Paramotor_pilot"%}</h4>
       {% get_chunk 'paramotor_pilot_short' as paramotor_pilot %}
 
       <p class="card-text">{{ paramotor_pilot | safe}}</p>
     </div>
     <div class="card-footer">
       <!-- TODO add link -->
-      <a href="#" class="btn btn-primary">{% trans 'Download form'%}</a>
+      <a href="#" class="btn btn-primary">{% trans 'str_Download_form'%}</a>
     </div>
   </div>
 </div>
@@ -63,7 +61,7 @@ From the {{ start }}, to the {{ end }}.
   <div class="card h-100">
     <img class="card-img-top" src="http://placehold.it/500x325" alt="">
     <div class="card-body">
-      <h4 class="card-title">{% trans "PPL Pilot"%}</h4>
+      <h4 class="card-title">{% trans "str_PPL_pilot"%}</h4>
       {% get_chunk 'ppl_pilot_short' as ppl_pilot %}
 
       <p class="card-text">{{ppl_pilot | safe}}</p>
@@ -79,14 +77,14 @@ From the {{ start }}, to the {{ end }}.
   <div class="card h-100">
     <img class="card-img-top" src="http://placehold.it/500x325" alt="">
     <div class="card-body">
-      <h4 class="card-title">{% trans "Exhibitor"%}</h4>
+      <h4 class="card-title">{% trans "str_Exhibitor"%}</h4>
       {% get_chunk 'exhibitor_short' as exhibitor %}
 
       <p class="card-text">{{ exhibitor | safe}}</p>
     </div>
     <div class="card-footer">
       <!-- TODO add link -->
-      <a href="#" class="btn btn-primary">Find Out More!</a>
+      <a href="#" class="btn btn-primary">{% trans 'str_Find_out_more' %}</a>
     </div>
   </div>
 </div>
