--- a/meeting/templates/staff_reservation_list.html
+++ b/meeting/templates/staff_reservation_list.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block page_title %}
-{% trans "Pilots Reservations" %}
+{% trans "str_Pilots_reservations" %}
 {% endblock %}
 
 {% block content %}
@@ -22,15 +22,15 @@
 <table id="reservation_table" class="table table-hover">
   <thead class="thead-dark">
     <tr>
-    <th>{% trans "ID" %}</th>
-    <th>{% trans "Time Slot" %}</th>
+    <th>{% trans "str_Reservation_number" %}</th>
+    <th>{% trans "str_Time_slot" %}</th>
     <th>{% trans "str_Pilot" %}</th>
     <th>{% trans "str_Imatriculation" %}</th>
-    <th>{% trans "Radio Id" %}</th>
-    <th>{% trans "Fuel" %}</th>
+    <th>{% trans "str_Radio_id" %}</th>
+    <th>{% trans "str_Fuel" %}</th>
     <th>{% trans "str_Flight_plan" %}</th>
-    <th>{% trans "Esthetic Cup" %}</th>
-    <th class="center">{% trans "Actions" %}</th>
+    <th>{% trans "str_Esthetic_cup" %}</th>
+    <th class="center">{% trans "str_Actions" %}</th>
     </tr>
   </thead>
   <tbody>
@@ -50,7 +50,7 @@
     <td>{{res.esthetic_cup}}</td>
     <td class="center">
       {% if res.ulm is not None %}
-        <a href="{% url 'staff_reservation_overview' res.pk %}" class="btn btn-primary">{% trans "Validate" %}</a>
+        <a href="{% url 'staff_reservation_overview' res.pk %}" class="btn btn-primary">{% trans "str_Validate" %}</a>
         {% with label="label"|add:res.reservation_number%}
           <div style="display:none" >
             <div class="" id="{{label}}" style="text-align:center;padding-top:10%">
@@ -59,7 +59,7 @@
                 {{res.ulm}}
             </div>
           </div>
-          <button type="button" onclick="printJS('{{label}}', 'html')" class="btn btn-warning">{% trans "Print" %}</button>
+          <button type="button" onclick="printJS('{{label}}', 'html')" class="btn btn-warning">{% trans "str_Print" %}</button>
         {% endwith %}
       {% endif %}
     </td>
