continue reworking gettext msgid

--- a/pages/templates/about.html
+++ b/pages/templates/about.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block header %}
-<h1>{% trans "About" %}</h1>
+<h1>{% trans "str_About" %}</h1>
 {% endblock %}
 
 {% block content %}
