--- a/pages/templates/contact.html
+++ b/pages/templates/contact.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block header %}
-<h1>{% trans "Contact" %}</h1>
+<h1>{% trans "str_Contact" %}</h1>
 {% endblock %}
 
 {% block content %}
