--- a/pages/templates/on_site.html
+++ b/pages/templates/on_site.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block header %}
-<h1>{% trans "On Site" %}</h1>
+<h1>{% trans "str_On_site" %}</h1>
 {% endblock %}
 
 {% block content %}
