--- a/pages/templates/privacy.html
+++ b/pages/templates/privacy.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block header %}
-<h1>{% trans "Privacy Policies" %}</h1>
+<h1>{% trans "str_Privacy_policies" %}</h1>
 {% endblock %}
 
 {% block content %}
