--- a/pages/templates/terms.html
+++ b/pages/templates/terms.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block header %}
-<h1>{% trans "Terms and Conditions of Use" %}</h1>
+<h1>{% trans "str_Legal_terms" %}</h1>
 {% endblock %}
 
 {% block content %}
