--- a/templates/emails/includes/specialised/email_header_bar.html
+++ b/templates/emails/includes/specialised/email_header_bar.html
@@ -3,6 +3,6 @@
 
 {% block content %}
 <h1 style="color:{{textcolor}};line-height:100%;font-family:Helvetica,Arial,sans-serif;font-size:35px;font-weight:normal;margin-bottom:5px;text-align:center;">
-  {% trans 'Salon ULM Blois'%}
+  {% trans 'str_Salon_Ulm_de_Blois'%}
 </h1>
 {% endblock %}
