--- a/templates/errors/403.html
+++ b/templates/errors/403.html
@@ -4,8 +4,8 @@
 {% block header %}
 <div class="text-center">
     <div class="mx-auto" style="color: #5a5c69;font-size:7rem;position:relative;line-height:1;width:12.5rem;" data-text="403">403</div>
-    <p class="lead text-gray-800 mb-5">{% trans 'Access denied...' %}</p>
-    <p class="text-gray-500 mb-0">{% trans 'You don't have permission to acces this pages.' %}</p>
-    <a href="{% url 'index'%}">&larr; {% trans 'Back to home' %}</a>
+    <p class="lead text-gray-800 mb-5">{% trans 'str_Access_denied' %}</p>
+    <p class="text-gray-500 mb-0">{% trans 'str_Insufisant_permission' %}</p>
+    <a href="{% url 'index'%}">&larr; {% trans 'str_Back_home' %}</a>
 </div>
 {% endblock %}
