--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -5,16 +5,16 @@
   <div class="container">
     <div class="row text-white">
         <div class="col-sm">
-            <h5>{% trans "Get Started" %}</h5>
+            <h5>{% trans "str_Get_started" %}</h5>
             <ul>
-                <li><a href="{% url 'index' %}">{% trans "Home" %}</a></li>
-                <li><a href="{% url 'signup'%}">{% trans "Sign Up" %}</a></li>
+                <li><a href="{% url 'index' %}">{% trans "str_Home" %}</a></li>
+                <li><a href="{% url 'signup'%}">{% trans "str_Sign_up" %}</a></li>
             </ul>
         </div>
         <div class="col-sm">
-            <h5>{% trans "About Us" %}</h5>
+            <h5>{% trans "str_About_us" %}</h5>
             <ul>
-                <li><a href="{% url 'about'%}">{% trans "About" %}</a></li>
+                <li><a href="{% url 'about'%}">{% trans "str_About" %}</a></li>
                 <li><a href="{% url 'contact'%}">{% trans "Contact Us" %}</a></li>
             </ul>
         </div>
@@ -22,16 +22,16 @@
             <h5>{% trans "Support" %}</h5>
             <ul>
                 <li><a href="{% url 'faq'%}">{% trans "str_FAQ" %}</a></li>
-                <li><a href="{% url 'on_site'%}">{% trans "On Site" %}</a></li>
-                <li><a href="{% url 'pilot_informations'%}">{% trans "Pilot Informations" %}</a></li>
+                <li><a href="{% url 'on_site'%}">{% trans "str_On_site" %}</a></li>
+                <li><a href="{% url 'pilot_informations'%}">{% trans "str_Pilots_information" %}</a></li>
             </ul>
         </div>
         <div class="col-sm">
           <h5>{% trans "legal" %}</h5>
           <ul>
-            <li><a href="{% url 'privacy' %}">{% trans "Privacy Policies" %}</a></li>
-            <li><a href="{% url 'copyright' %}">{% trans "Copyright Notices" %}</a></li>
-            <li><a href="{% url 'terms' %}">{% trans "Terms and Conditions of Use" %}</a></li>
+            <li><a href="{% url 'privacy' %}">{% trans "str_Privacy_policies" %}</a></li>
+            <li><a href="{% url 'copyright' %}">{% trans "str_Copyright_notices" %}</a></li>
+            <li><a href="{% url 'terms' %}">{% trans "str_Legal_terms" %}</a></li>
           </ul>
         </div>
     </div>
