--- a/pages/templates/copyright.html
+++ b/pages/templates/copyright.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block header %}
-<h1>{% trans "Copyright Notices" %}</h1>
+<h1>{% trans "str_Copyright_notices" %}</h1>
 {% endblock %}
 
 {% block content %}
