--- a/templates/base/base_generic.html
+++ b/templates/base/base_generic.html
@@ -1,6 +1,6 @@
 {% load static %}{% load i18n %}<!DOCTYPE html>
 <html lang="en">
-<title>{% block title %}{% trans "Salon ULM de Blois" %}{% endblock %}</title>
+<title>{% block title %}{% trans "str_Salon_Ulm_de_Blois" %}{% endblock %}</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"> -->
