--- a/templates/base/base_logged.html
+++ b/templates/base/base_logged.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>{% block title %}{% trans "Salon ULM de Blois" %}{% endblock %}</title>
+  <title>{% block title %}{% trans "str_Salon_Ulm_de_Blois" %}{% endblock %}</title>
 
   <!-- Custom fonts for this template-->
   <link href="{% static 'vendor/fontawesome-free/css/all.min.css'%}" rel="stylesheet" type="text/css">
@@ -49,7 +49,7 @@
         <div class="container-fluid">
           {% include 'alert_messages.html'%}
           {% block messages %}
-          
+
           {% endblock%}
           <!-- Page Heading -->
           <h1 class="h3 mb-4 text-gray-800">{% block page_title %}{% endblock %}</h1>
@@ -84,15 +84,15 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">{% trans "Ready to Leave?"%}</h5>
+          <h5 class="modal-title" id="exampleModalLabel">{% trans "str_Ready_to_leave"%}</h5>
           <button class="close" type="button" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">×</span>
           </button>
         </div>
-        <div class="modal-body">{% trans 'Select "Logout" below if you are ready to end your current session.' %}</div>
+        <div class="modal-body">{% trans 'str_confirm_logout' %}</div>
         <div class="modal-footer">
-          <button class="btn btn-secondary" type="button" data-dismiss="modal">{% trans "Cancel" %}</button>
-          <a class="btn btn-primary" href="{% url 'logout'%}">{% trans "Logout" %}</a>
+          <button class="btn btn-secondary" type="button" data-dismiss="modal">{% trans "str_Cancel" %}</button>
+          <a class="btn btn-primary" href="{% url 'logout'%}">{% trans "str_Logout" %}</a>
         </div>
       </div>
     </div>
