--- a/templates/base/logged_delete_form.html
+++ b/templates/base/logged_delete_form.html
@@ -6,10 +6,11 @@
 <div class="d-flex justify-content-center text-center">
 <form method="post">
     {% csrf_token %}
-    <p>{% blocktrans %}Are you sure you want to delete "{{ object }}"?{% endblocktrans%}</p>
-    <p>{% trans 'This action can not be canceled.'%}</p>
+    {# Translators: contain variable %(object)s #}
+    <p>{% blocktrans %}str_confirm_deletion{% endblocktrans%}</p>
+    <p>{% trans 'str_Action_can_not_be_canceled' %}</p>
     <input type="submit" value="Confirm" class="btn btn-danger">
-    <a class="btn btn-primary" href="{{cancel_url}}">{%trans 'Cancel'%}</a>
+    <a class="btn btn-primary" href="{{cancel_url}}">{%trans 'str_Cancel'%}</a>
 </form>
 </div>
 
