--- a/templates/emails/includes/base/header_row.html
+++ b/templates/emails/includes/base/header_row.html
@@ -35,7 +35,8 @@
                         is visible.
                       -->
                       <td align="left" valign="middle" id="invisibleIntroduction" class="flexibleContainerBox" style="display:none !important; mso-hide:all;">
-                        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:100%;">
+                        <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:100%;">msgid "This message is not display correctly?"
+
                           <tr>
                             <td align="left" class="textContent">
                               <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;color:{{textcolor}};text-align:center;line-height:120%;">
@@ -53,7 +54,7 @@
                             <td align="left" class="textContent">
                               <!-- CONTENT // -->
                               <div style="font-family:Helvetica,Arial,sans-serif;font-size:13px;color:{{textcolor}};text-align:center;line-height:120%;">
-                                {% trans 'This message is not display correctly?'%} <a href="#" target="_blank" style="text-decoration:none;border-bottom:1px solid {{textcolor}};color:{{textcolor}};"><span style="color:{{textcolor}};">{% trans 'View it in your browser.' %}</span></a>
+                                {% trans 'str_email_message_display_issue'%} <a href="#" target="_blank" style="text-decoration:none;border-bottom:1px solid {{textcolor}};color:{{textcolor}};"><span style="color:{{textcolor}};">{% trans 'str_email_view_in_browser' %}</span></a>
                              </div>
                             </td>
                           </tr>
