--- a/templates/errors/400.html
+++ b/templates/errors/400.html
@@ -4,8 +4,8 @@
 {% block header %}
 <div class="text-center">
     <div class="mx-auto" style="color: #5a5c69;font-size:7rem;position:relative;line-height:1;width:12.5rem;" data-text="400">400</div>
-    <p class="lead text-gray-800 mb-5">{% trans 'Bad request...' %}</p>
-    <p class="text-gray-500 mb-0">{% trans 'Your request resulted in an error' %}</p>
-    <a href="{% url 'index'%}">&larr; {% trans 'Back to home' %}</a>
+    <p class="lead text-gray-800 mb-5">{% trans 'str_Bad_request' %}</p>
+    <p class="text-gray-500 mb-0">{% trans 'str_error_request_throw_error' %}</p>
+    <a href="{% url 'index'%}">&larr; {% trans 'str_Back_home' %}</a>
 </div>
 {% endblock %}
