--- a/templates/errors/logged_500.html
+++ b/templates/errors/logged_500.html
@@ -6,8 +6,8 @@
 
 <div class="text-center">
     <div class="error mx-auto" data-text="500">500</div>
-    <p class="lead text-gray-800 mb-5">{% trans 'Internal Error' %}</p>
-    <p class="text-gray-500 mb-0">{% trans 'It looks like you found a glitch in the matrix...' %}</p>
-    <a href="{% url 'logged_index'%}">&larr; {% trans 'Back to home' %}</a>
+    <p class="lead text-gray-800 mb-5">{% trans 'str_Internal_error' %}</p>
+    <p class="text-gray-500 mb-0">{% trans 'str_glitch_in_matrix' %}</p>
+    <a href="{% url 'logged_index'%}">&larr; {% trans 'str_Back_home' %}</a>
 </div>
 {% endblock %}
